--- a/main.html
+++ b/main.html
@@ -27,6 +27,8 @@
                 height: 100%;
             }
             #bodyimg {
+                width: 100%;
+                height: 100%;
                 background: url("./background.jpg") no-repeat;
                 background-size: cover;
                 overflow: hidden;
@@ -55,14 +57,29 @@
                 width: 100%;
                 height: 80%;
                 overflow: hidden;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
             }
 
             .EnterPOP .ct .head {
-                margin-top: 15px;
-                text-align: center;
-                font-size: 37px;
+                width: 100%;
+                height: 30px;
+            }
+
+            .headtext {
+                position: absolute;
+                width:180px;
+                left:50%;
+                font-size: 13px;
                 font-weight: bolder;
-                text-shadow: 0 0 10px rgb(255, 255, 255);
+                text-align: center;
+                color:rgb(70, 70, 70);
+                padding-top: 10px;
+                padding-bottom: 3px;
+                background-color: rgba(255, 255, 255, 0.5);
+                border-radius: 0 0 13px 13px;
+                transform: translate(-50%, 0);
             }
 
             .EnterPOP .ct img {
@@ -107,38 +124,39 @@
             .scroll_down {
                 position: absolute;
                 width: 30px;
-                height: 32px;
+                height: 90px;
                 left: 50%;
-                bottom: 10%;
+                bottom: 5%;
                 transform: translate(-50%, 0);
+                -webkit-mask-box-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%,rgba(255, 255, 255, 0) 40%,rgba(255, 255, 255, 1) 70%, rgba(255, 255, 255, 1) 70%, rgba(255, 255, 255, 0) 100%);
             }
 
             .scroll_down::after,
             .scroll_down::before {
                 content: "";
                 position: absolute;
-                top: 10%;
+                top: 0%;
                 left: 50%;
-                border: 2.5px solid rgb(0, 0, 97);
+                border: 2.5px solid rgb(0, 0, 0);
                 height: 15px;
                 width: 15px;
                 transform: translate(-50%, 0) rotate(45deg);
                 border-top: transparent;
                 border-left: transparent;
-                animation: scroll_down 1.2s ease-out infinite;
+                animation: scroll_down 1.5s linear infinite;
             }
             .scroll_down::after {
-                top: 25%;
+                top: 15%;
                 animation-delay: 0.5s;
             }
             .scroll_down_text {
                 position: absolute;
                 left: 50%;
-                bottom: 15%;
+                bottom: 0.5%;
                 text-align: center;
                 font-weight: 500;
                 font-size: 15px;
-                color: rgb(48, 48, 48);
+                color: rgb(0, 0, 0);
                 /*text-shadow: 0 0 5px rgb(255, 255, 255);
                 -webkit-backdrop-filter: blur(10px);
                 backdrop-filter: blur(10px);
@@ -177,12 +195,12 @@
                 padding-right: 5px;
                 padding-top: 3px;
                 filter:invert(62%);
-                margin-left: -20px;
+                margin-left: -16.5px;
             }
 
             @keyframes scroll_down {
                 0% {
-                    opacity: 0;
+                    opacity: 10;
                 }
                 30% {
                     opacity: 1;
@@ -191,8 +209,8 @@
                     opacity: 1;
                 }
                 100% {
-                    opacity: 0;
-                    top: 90%;
+                    opacity: 1;
+                    top: 100%;
                 }
 
             }
@@ -219,7 +237,7 @@
             var elm = ".box";
 			var boxcount= $(elm).length;
 			var wheelflag = false; //휠 동작중인지 아닌지 체크
-			var wheelindex = 1; //첫번째 전체화면 엘리먼트 인덱스값
+			var wheelindex = 0; //첫번째 전체화면 엘리먼트 인덱스값
 			
             $(elm).each(function (index) {
                 // 개별적으로 Wheel 이벤트 적용
@@ -291,7 +309,7 @@
         
         <div class="EnterPOP">
             <div class="ct">
-                <div class="head">PORTFOLIO</div>
+                <div class="head"><div class="headtext">PORTFOLIO</div></div>
                 <div class="ctt"><img class="img" src="./man.png">
                     <div style="margin: 20px 0 15px 20px">
                         <p style="font-weight: bold; font-size: 15px;">Front-end Developer</p>
@@ -308,7 +326,7 @@
                 <div class="myText">#신입</div>
             </div>
         </div>
-        <div class="box" id="bodyimg"><div class="scroll_down"></div>
+        <div class="box"><div id="bodyimg"></div><div class="scroll_down"></div>
         <div class="scroll_down_text">scroll down</div></div>
         <div class="box" style="background-color:rgb(255,255,255);">2</div>
         <div class="box" style="background-color:orange;">3</div>
