--- a/main.html
+++ b/main.html
@@ -123,10 +123,10 @@
 
             .scroll_down {
                 position: absolute;
-                width: 30px;
-                height: 90px;
+                width: 25px;
+                height: 70px;
                 left: 50%;
-                bottom: 5%;
+                bottom: 5.5%;
                 transform: translate(-50%, 0);
                 -webkit-mask-box-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%,rgba(255, 255, 255, 0) 40%,rgba(255, 255, 255, 1) 70%, rgba(255, 255, 255, 1) 70%, rgba(255, 255, 255, 0) 100%);
             }
@@ -138,16 +138,16 @@
                 top: 0%;
                 left: 50%;
                 border: 2.5px solid rgb(0, 0, 0);
-                height: 15px;
-                width: 15px;
+                height: 13px;
+                width: 13px;
                 transform: translate(-50%, 0) rotate(45deg);
                 border-top: transparent;
                 border-left: transparent;
                 animation: scroll_down 1.5s linear infinite;
             }
             .scroll_down::after {
-                top: 15%;
-                animation-delay: 0.5s;
+                top: 0%;
+                animation-delay: 0.4s;
             }
             .scroll_down_text {
                 position: absolute;
@@ -155,8 +155,8 @@
                 bottom: 0.5%;
                 text-align: center;
                 font-weight: 500;
-                font-size: 15px;
-                color: rgb(0, 0, 0);
+                font-size: 12px;
+                color: rgb(99, 99, 99);
                 /*text-shadow: 0 0 5px rgb(255, 255, 255);
                 -webkit-backdrop-filter: blur(10px);
                 backdrop-filter: blur(10px);
@@ -327,7 +327,7 @@
             </div>
         </div>
         <div class="box"><div id="bodyimg"></div><div class="scroll_down"></div>
-        <div class="scroll_down_text">scroll down</div></div>
+        <div class="scroll_down_text">SCORLL DOWN</div></div>
         <div class="box" style="background-color:rgb(255,255,255);">2</div>
         <div class="box" style="background-color:orange;">3</div>
         <div class="box" style="background-color:yellow;">4</div>
