--- a/main.html
+++ b/main.html
@@ -246,7 +246,7 @@
                 $(elm).each(function (index) {
                     // 개별적으로 Wheel 이벤트 적용
                     $(this).on("mousewheel DOMMouseScroll", function (e) {
-                        alert('스크롤됨');
+                        alert('scrolled');
                         e.preventDefault();
                         console.log($(this).index());
                         var delta = 0;
