--- a/main.html
+++ b/main.html
@@ -236,8 +236,8 @@
                 align-items: center;
             }
         </style>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-3.5.1.js"></script>
-        <script type="text/javascript">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script>
             window.onload = function () {
                 var elm = ".box";
                 var boxcount = $(elm).length;
