--- a/main2.html
+++ b/main2.html
@@ -287,8 +287,8 @@
 
             $(document).ready(function () {
                 var headervisible = false;
-                /*$(window).scroll(function () {
-                    var scroll = $(this).scrollTop();
+                $(window).scroll(function () {
+                    /*var scroll = $(this).scrollTop();
                     var num = 2;
                     $("#ct2").stop().animate({"top":-scroll/6},0.1);
                     console.trace($("#ct"+num).offset().top);*/
