--- a/main2.html
+++ b/main2.html
@@ -26,6 +26,7 @@
             html {
                 width: 100%;
                 height: 100%;
+                overscroll-behavior: contain;
                 
             }
             #bodyimg {
