--- a/main2.html
+++ b/main2.html
@@ -27,10 +27,10 @@
                 width: 100%;
                 height: 100%;
                 overscroll-behavior: contain;
-                
+
             }
             #bodyimg {
-                position: fixed;
+                position: absolute;
                 top: 0;
                 left: 0;
                 width: 100%;
@@ -42,7 +42,7 @@
             }
             .EnterPOP {
                 position: absolute;
-                top: 25%;
+                top: 180px;
                 width: 100%;
                 z-index: 999;
                 padding-bottom: 8px;
@@ -71,7 +71,7 @@
                 position: absolute;
                 width: 1.5px;
                 height: 35px;
-                margin: 10px;
+                margin: 6px;
                 background-color: rgba(0, 0, 0, 0.1);
                 right: 187px;
                 opacity: 0;
@@ -181,7 +181,7 @@
             }
             .scroll_down_text {
                 position: absolute;
-                width:100%;
+                width: 100%;
                 left: 50%;
                 bottom: 0.5%;
                 text-align: center;
@@ -265,6 +265,8 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin-bottom: 200px;
+                opacity: 0;
             }
 
             #container {
@@ -277,23 +279,78 @@
             #ct1 {
                 width: 100%;
                 height: 100%;
+                opacity: 1;
+                margin-bottom: 0;
+            }
+
+            #ct4 {
+                width: 100%;
+                height: 50%;
+                opacity: 0;
+                margin-bottom: 0;
             }
 
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
 
         <script>
 
             $(document).ready(function () {
+
                 var headervisible = false;
+
+                var controller = new ScrollMagic.Controller();
+                var controller2 = new ScrollMagic.Controller({
+                    globalSceneOptions: {
+                        triggerHook: 'onLeave',
+                        duration: "200%"
+                    }
+                });
+
+                var slides = document.querySelectorAll(".box");
+                var tween = {};
+                var pageScene = {};
+
+                for (var i = 1; i < slides.length; i++) {
+                    new ScrollMagic
+                        .Scene({triggerElement: slides[i]})
+                        .setPin(slides[i], {pushFollowers: false})
+                        //.addIndicators()
+                        .addTo(controller2);
+                }
+
+                for (var i = 1; i < slides.length; i++) {
+                    tween[i] = TweenMax.to(slides[i], 0.5, {opacity: 1});
+                    new ScrollMagic
+                        .Scene(
+                            {triggerElement: slides[i], duration: "50%", offset: -200}
+                        )
+                        .setTween(tween[i])
+                        //.addIndicators({name: "page opacity"})
+                        .addTo(controller);
+                }
+
+                var POPscene = new ScrollMagic
+                    .Scene({
+                        triggerElement: ".EnterPOP",
+                        duration: 100 * 8 + "%",
+                        triggerHook: 0
+                    })
+                    .setPin(".EnterPOP")
+                    .addTo(controller)
+                //.addIndicators({name: "pop"})
+
                 $(window).scroll(function () {
-                    /*var scroll = $(this).scrollTop();
-                    var num = 2;
-                    $("#ct2").stop().animate({"top":-scroll/6},0.1);
-                    console.trace($("#ct"+num).offset().top);*/
-                    if ($(this).scrollTop() >= 150) {
+                    if ($(this).scrollTop() >= 180) {
                         if (headervisible == false) {
                             headervisible = true;
                             $("#profileimg").stop(true, true);
@@ -313,7 +370,7 @@
                             $("#profileimg").css({
                                 position: 'fixed',
                                 top: '-20%',
-                                marginTop: '10px',
+                                marginTop: '6px',
                                 opacity: '0',
                                 right: '140px',
                                 width: '20px',
@@ -337,7 +394,7 @@
                                 opacity: '1'
                             }, 500, 'easeOutQuad');
                             $(".name").animate({
-                                top: '20px',
+                                top: '15px',
                                 opacity: '1'
                             }, 400, 'easeOutQuad');
                         }
@@ -353,7 +410,7 @@
                             $(".name").css({opacity: '0', top: '-20%'});
 
                             $(".EnterPOP").animate({
-                                height: '200px'
+                                height: '210px'
                             }, 300, function () {
                                 $(".EnterPOP").css({height: 'auto'});
                             });
@@ -368,7 +425,7 @@
                             );
                             $(".head").show();
                             $(".EnterPOP").css(
-                                {'position': 'absolute', 'top': '25%', height: 'auto', backgroundColor: 'rgba(255, 255, 255, 0.05)'}
+                                {position: 'absolute', top: '150px', height: 'auto', backgroundColor: 'rgba(255, 255, 255, 0.05)'}
                             );
                             $("#profileimg").animate({
                                 width: '60px',
@@ -413,16 +470,16 @@
                 </div>
 
                 <div class="scroll_down"></div>
-                <div class="scroll_down_text">SCORLL DOWN</div>
+                <div class="scroll_down_text" id="trigger1">SCORLL DOWN</div>
             </div>
 
             <div class="box" id="ct2" style="background-color:rgb(255,255,255);">2</div>
-            <div class="box" style="background-color:orange;">3</div>
-            <div class="box" style="background-color:yellow;">4</div>
-            <div class="box" style="background-color:green;">5</div>
-            <div class="box" style="background-color:blue;">6</div>
-            <div class="box" style="background-color:indigo;">7</div>
-            <div class="box" style="background-color:violet;">8</div>
+            <div class="box" id="ct3" style="background-color:orange;">3</div>
+            <div class="box" id="ct4" style="background-color:yellow;">4</div>
+            <div class="box" id="ct5" style="background-color:green;">5</div>
+            <div class="box" id="ct6" style="background-color:blue;">6</div>
+            <div class="box" id="ct7" style="background-color:indigo;">7</div>
+            <div class="box" id="ct8" style="background-color:violet;">8</div>
         </div>
     </body>
 </html>
