--- a/main2.html
+++ b/main2.html
@@ -30,7 +30,7 @@
 
             }
             #bodyimg {
-                position: absolute;
+                position: fixed;
                 top: 0;
                 left: 0;
                 width: 100%;
@@ -42,13 +42,13 @@
             }
             .EnterPOP {
                 position: absolute;
-                top: 180px;
+                top: 30%;
                 width: 100%;
                 z-index: 999;
                 padding-bottom: 8px;
                 -webkit-backdrop-filter: blur(10px);
                 backdrop-filter: blur(10px);
-                background-color: rgba(255, 255, 255, 0.05);
+                background-color: rgba(255, 255, 255, 0.1);
                 border-radius: 0;
                 box-shadow: 6px 6px 20px -8px #000;
                 border-width: 1px 0 0 0;
@@ -265,8 +265,14 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                margin-bottom: 200px;
+                margin-bottom: 500px;
+                border-radius: 23px 23px 0 0;
                 opacity: 0;
+            }
+
+            .borderAnimation {
+                border-radius: 0;
+                transition: all 0.1s;
             }
 
             #container {
@@ -283,13 +289,9 @@
                 margin-bottom: 0;
             }
 
-            #ct4 {
-                width: 100%;
-                height: 50%;
-                opacity: 0;
-                margin-bottom: 0;
+            #ct2 {
+                opacity: 1;
             }
-
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script
@@ -312,27 +314,29 @@
                 var controller2 = new ScrollMagic.Controller({
                     globalSceneOptions: {
                         triggerHook: 'onLeave',
-                        duration: "200%"
+                        duration: "5000%"
                     }
                 });
 
                 var slides = document.querySelectorAll(".box");
                 var tween = {};
                 var pageScene = {};
+                var borderani = {};
 
                 for (var i = 1; i < slides.length; i++) {
                     new ScrollMagic
                         .Scene({triggerElement: slides[i]})
                         .setPin(slides[i], {pushFollowers: false})
-                        //.addIndicators()
+                        //.addIndicators({name:"header"})
+                        .setClassToggle(slides[i], "borderAnimation")
                         .addTo(controller2);
                 }
 
-                for (var i = 1; i < slides.length; i++) {
+                for (var i = 2; i < slides.length; i++) {
                     tween[i] = TweenMax.to(slides[i], 0.5, {opacity: 1});
                     new ScrollMagic
                         .Scene(
-                            {triggerElement: slides[i], duration: "50%", offset: -200}
+                            {triggerElement: slides[i], duration: "20%", offset: -200}
                         )
                         .setTween(tween[i])
                         //.addIndicators({name: "page opacity"})
@@ -347,22 +351,30 @@
                     })
                     .setPin(".EnterPOP")
                     .addTo(controller)
-                //.addIndicators({name: "pop"})
+                  //.addIndicators({name: "pop"})
 
-                $(window).scroll(function () {
-                    if ($(this).scrollTop() >= 180) {
-                        if (headervisible == false) {
-                            headervisible = true;
-                            $("#profileimg").stop(true, true);
-                            $(".bottom").stop(true, true);
-                            $(".EnterPOP").stop(true, true);
+                var POPscene2 = new ScrollMagic
+                    .Scene({
+                        triggerElement: "#ct2",
+                        triggerHook: .45
+                    })
+                    .addTo(controller)
+                    .on("enter leave", function (e) {
+                        if (e.type == "enter") {
 
+                            $("#profileimg").stop(true, false);
+                            $(".bottom").stop(true, false);
+                            $(".EnterPOP").stop(true, false);
+                            
                             $(".EnterPOP").animate({
                                 height: '50px'
-                            }, 200, 'easeOutQuad');
+                            }, 150, 'easeOutQuad', function () {
+                                $(".EnterPOP").css({backgroundColor:"rgba(255,255,255,0.4"})
+                            });
+
                             $(".bottom").animate({
                                 opacity: '0'
-                            }, 200, function () {
+                            }, 150, function () {
                                 $(".bottom").hide();
                             });
                             $("#profilecontent").hide();
@@ -386,10 +398,8 @@
                                 padding: '7px',
                                 borderRadius: '10px',
                                 opacity: '1'
-                            }, 200, 'easeOutQuad');
-                            $(".EnterPOP").css(
-                                {position: 'fixed', top: '0', backgroundColor: 'rgba(255, 255, 255, 0.4)'}
-                            );
+                            }, 150, 'easeOutQuad');
+
                             $(".line").animate({
                                 opacity: '1'
                             }, 500, 'easeOutQuad');
@@ -397,14 +407,12 @@
                                 top: '15px',
                                 opacity: '1'
                             }, 400, 'easeOutQuad');
-                        }
-                    } else {
-                        if (headervisible == true) {
-                            $("#profileimg").stop(true, true);
-                            $(".bottom").stop(true, true);
-                            $(".EnterPOP").stop(true, true);
-                            $(".line").stop(true, true);
-                            $(".name").stop(true, true);
+                        } else {
+                            $("#profileimg").stop(true, false);
+                            $(".bottom").stop(true, false);
+                            $(".EnterPOP").stop(true, false);
+                            $(".line").stop(true, false);
+                            $(".name").stop(true, false);
 
                             $(".line").css({opacity: '0'});
                             $(".name").css({opacity: '0', top: '-20%'});
@@ -424,17 +432,23 @@
                                 {position: 'relative', marginTop: '15px', padding: '20px', right: '0px', float: 'left'}
                             );
                             $(".head").show();
-                            $(".EnterPOP").css(
-                                {position: 'absolute', top: '150px', height: 'auto', backgroundColor: 'rgba(255, 255, 255, 0.05)'}
-                            );
+                            $(".EnterPOP").css({backgroundColor: 'rgba(255, 255, 255, 0.05)'});
                             $("#profileimg").animate({
                                 width: '60px',
                                 height: '60px',
                                 borderRadius: '15px'
                             }, 200, 'easeOutQuad', function () {});
 
-                            headervisible = false;
                         }
+                    });
+
+                $(window).scroll(function () {
+                    if ($(this).scrollTop() >= 180) {
+                        if (headervisible == false) {
+                            headervisible = true;
+                        }
+                    } else {
+                        headervisible = false;
                     }
                 });
             });
@@ -477,9 +491,6 @@
             <div class="box" id="ct3" style="background-color:orange;">3</div>
             <div class="box" id="ct4" style="background-color:yellow;">4</div>
             <div class="box" id="ct5" style="background-color:green;">5</div>
-            <div class="box" id="ct6" style="background-color:blue;">6</div>
-            <div class="box" id="ct7" style="background-color:indigo;">7</div>
-            <div class="box" id="ct8" style="background-color:violet;">8</div>
         </div>
     </body>
 </html>
