--- a/main2.html
+++ b/main2.html
@@ -26,15 +26,15 @@
             body,
             html {
                 width: 100%;
-                height: calc(100%);
+                height: 100%;
                 overscroll-behavior: contain;
 
             }
             #bodyimg {
                 position: fixed;
                 top: 0;
-                left: 0;
-                width: 100%;
+                left: -25%;
+                width: 150%;
                 height: 100%;
                 background: url("./background.jpg") no-repeat;
                 background-size: cover;
@@ -285,7 +285,7 @@
 
             #ct1 {
                 width: 100%;
-                height: 100%;
+                height: 100vh;
                 opacity: 1;
                 margin-bottom: 0;
             }
