--- a/main2.html
+++ b/main2.html
@@ -33,8 +33,8 @@
             #bodyimg {
                 position: fixed;
                 top: 0;
-                left: -25%;
-                width: 150%;
+                left: 0;
+                width: 100%;
                 height: 100vh;
                 background: url("./background.jpg") no-repeat;
                 background-size: cover;
